# study-knk-c

./: CMakeLists.txt  README.md  main.c  temp-editor.c
ch1/: celsius.c  dweight.c
ch1/ex/: ex1.c  ex2.c  ex3.c
ch10/: ext_stack.c  guess.c  guess2.c  poker.c  programorg.c  svarinblock.c
ch11/: decompose.c  maxmin.c  multipointer.c  passign.c  returnpmaxmin.c
ch11/proj/: ch11prob4.c
ch12/: array-processing-pointer.c  mutli-dim-array.c  pointer-arith.c  pointer-rel.c  print-real-address.c  reverse3.c  stack.c  versatile-array-as-pointer.c
ch13/: count-str.c  planet.c  pointer-array-comb.c  remind.c  string-array-property.c  string-functions.c  string-idoms.c  string-rw-test.c
ch14/: generic-max.c  useful-macros.c
ch15/devide-files/: justify.c  line.c  line.h  makefile  word.c  word.h
ch15/devide-files/output/: justify
ch15/devide-files/rsc/: old.txt
ch15/rpn-calc/: calc.c  stack.c  stack.h  token.c  token.h
ch16/: lvalue.c  part-struct-2.c  part-struct.c  tstruct.c  typedefstruct.c  union-ex-2.c  union-ex.c
ch16/inven-prog/: inventory.c  makefile  readline.c  readline.h
ch16/inven-prog/output/: inventory
ch17/: array-m-allock.c  flex-arr-memb.c  func-pointer.c  mem-pointer.c  pointer-m-alloc.c  remind2.c  tabulate.c
ch17/inven-prog/: inventory2.c  readline.c  readline.h
ch17/linked-list/: linked-list-2.c  linked-list.c
ch18/: compound-decl.c  extern-linkage-test.c  makefile  struct-init.c
ch18/function-storage-class/: extern-fn.c  extern-fn.h  fn-storage.c  makefile  static-fn  static-fn.c  static-fn.h
ch18/inblock-static/: add.c  add.h  inblock-static.c  makefile  static-header-test.c  static-header-test.h
ch18/inline-function/: inline-extern.c  inline-extern.h  inline-function  inline-test.c  makefile
ch18/inline-function/src/: inline-test.c
ch18/inline-function/src/inline-extern/: inline-extern.c  inline-extern.h
ch19/error-stack-adt/: client.c  stack.c  stack.h
ch19/info-hiding-stack/: stack.h  stack1.c  stack2.c
ch19/linked-stack/: linked-stack
ch19/linked-stack-adt/: client.c  stack.c  stack.h
ch19/linked-stack/src/: client.c
ch19/linked-stack/src/stack-adt/: stack.c  stack.h
ch19/stack/: stack
ch19/stack-adt/: makefile  stack-client.c  stackADT.c  stackADT.h
ch19/stack-semi-adt/: stack-semi-adt.c  stack.h
ch19/stack/src/: client.c
ch19/stack/src/stack-adt/: stack-adt.c  stack-adt.h
ch19/vl-stack/: vl-stack
ch19/vl-stack-adt/: client.c  makefile  stack.c  stack.h
ch19/vl-stack/src/: client.c
ch19/vl-stack/src/stack-adt/: stack.c  stack.h
ch2/: dweight2.c  printout.c  pun.c  tprintf.c
ch2/ex/: ch2ex6.c  ex4.c
ch20/access-bits/: access-bits  access-bits.c  access-bits.h  client.c  makefile
ch20/access-bits/src/: client.c
ch20/access-bits/src/access-bits-lib/: access-bits.c  access-bits.h
ch20/bit-field-struct/: bit-field-struct.c  makefile
ch20/bitfield-struct/: bitfield-struct
ch20/bitfield-struct/src/: bit-field-struct.c
ch20/bitwise-op-intro/: bitwise-op-intro.c  makefile
ch20/reg-coding/: reg-coding
ch20/reg-coding/src/: reg-coding.c
ch20/register-coding/: makefile  reg-coding.c
ch20/view-mem/: makefile  view-mem.c
ch20/xor-encryption/: makefile  xor.c
ch20/xor-encryption/res/: msg  msg_enc
ch20/xor-encryption/src/: xor.c
ch3/: addfrac.c  endswithlf.c  scanin.c
ch3/ex/: ch2ex1.c
ch3/proj/: ch2proj5.c
ch4/: remainder.c  subexpr.c  tassign.c  tincdec.c  tpreced.c  upc.c
ch4/ex/: ch4ex1.c
ch4/proj/: ch4proj1.cpp
ch5/: broker.c  ch4_summary.txt  date.c
ch6/: checking.c  numdigits.c  square.c  square3.c  sum.c  twhile.c
ch7/: length.c  length2.c  sum2.c  tfloat.c  tint.c  ttypeconv.c
ch7/proj/: ch7no14.c  ch7no5.c
ch8/: ainit.c  array-init-test.c  constarray.c  deal.c  identitym.c  interest.c  repdigit.c  reverse.c  reverse2.c
ch9/: 2dimsum.c  2dimsum2.c  arraysum.c  average.c  concat.c  countdown.c  prime.c  pun2.c  quicksort.c  recpow.c  recurfact.c
