cmake_minimum_required(VERSION 3.6)
project(study_knk_c)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O -Wall -W -pedantic -ansi -std=c99")

# Main
add_executable(main main.c)

add_executable(pun ch1/pun.c)
add_executable(dweight ch1/dweight.c)
add_executable(dweight2 ch1/dweight2.c)
add_executable(celsius ch1/celsius.c)

add_executable(ex1 ch1/ex/ex1.c)
add_executable(ex2 ch1/ex/ex2.c)
add_executable(ex3 ch1/ex/ex3.c)
add_executable(ex4 ch1/ex/ex4.c)

add_executable(printout ch2/printout.c)
add_executable(tprintf ch2/tprintf.c)
add_executable(scanin ch2/scanin.c)
add_executable(addfrac ch2/addfrac.c)
add_executable(endswithlf ch2/endswithlf.c)

add_executable(ch2ex1 ch2/ex/ch2ex1.c)
add_executable(ch2ex6 ch2/ex/ch2ex6.c)
add_executable(ch2proj5 ch2/proj/ch2proj5.c)

add_executable(upc ch4/upc.c)
add_executable(tassign ch4/tassign.c)
add_executable(tincdec ch4/tincdec.c)
add_executable(tpreced ch4/tpreced.c)
add_executable(subexpr ch4/subexpr.c)
add_executable(remainder ch4/remainder.c)
add_executable(ch4ex1 ch4/ex/ch4ex1.c)
add_executable(ch4proj1 ch4/proj/ch4proj1.cpp)

add_executable(broker ch5/broker.c)
add_executable(date ch5/date.c)

add_executable(twhile ch6/twhile.c)
add_executable(square ch6/square.c)
add_executable(sum ch6/sum.c)
add_executable(numdigits ch6/numdigits.c)
add_executable(checking ch6/checking.c)

add_executable(tint ch7/tint.c)
add_executable(sum2 ch7/sum2.c)
add_executable(tfloat ch7/tfloat.c)
add_executable(length ch7/length.c)
add_executable(length2 ch7/length2.c)
add_executable(ttypeconv ch7/ttypeconv.c)
add_executable(ch7no5 ch7/proj/ch7no5.c)
add_executable(ch7no14 ch7/proj/ch7no14.c)

add_executable(reverse ch8/reverse.c)
add_executable(repdigit ch8/repdigit.c)
add_executable(interest ch8/interest.c)
add_executable(identitym ch8/identitym.c)
add_executable(constarray ch8/constarray.c)
add_executable(deal ch8/deal.c)
add_executable(reverse2 ch8/reverse2.c)
add_executable(average ch9/average.c)
add_executable(countdown ch9/countdown.c)
add_executable(pun2 ch9/pun2.c)
add_executable(prime ch9/prime.c)
add_executable(arraysum ch9/arraysum.c)
add_executable(concat ch9/concat.c)
add_executable(2dimsum ch9/2dimsum.c)
add_executable(2dimsum2 ch9/2dimsum2.c)
add_executable(recurfact ch9/recurfact.c)
add_executable(recpow ch9/recpow.c)
add_executable(quicksort ch9/quicksort.c)
add_executable(ext_stack ch10/ext_stack.c)
add_executable(guess ch10/guess.c)
add_executable(guess2 ch10/guess2.c)
add_executable(svarinblock ch10/svarinblock.c)
add_executable(poker ch10/poker.c)
add_executable(passign ch11/passign.c)
add_executable(decompose ch11/decompose.c)
add_executable(maxmin ch11/maxmin.c)
add_executable(returnpmaxmin ch11/returnpmaxmin.c)
add_executable(multipointer ch11/multipointer.c)
add_executable(ch11prob4 ch11/proj/ch11prob4.c)
add_executable(pointer-arith ch12/pointer-arith.c)
add_executable(pointer-rel ch12/pointer-rel.c)
add_executable(array-processing-pointer ch12/array-processing-pointer.c)
add_executable(stack ch12/stack.c)
add_executable(versatile-array-as-pointer ch12/versatile-array-as-pointer.c)
add_executable(reverse3 ch12/reverse3.c)
add_executable(mutli-dim-array ch12/mutli-dim-array.c)
add_executable(print-real-address ch12/print-real-address.c)
add_executable(array-init-test ch8/array-init-test.c)
add_executable(string-rw-test ch13/string-rw-test.c)
add_executable(count-str ch13/count-str.c)
add_executable(string-array-property ch13/string-array-property.c)
add_executable(string-functions ch13/string-functions.c)
add_executable(remind ch13/remind.c)
add_executable(string-idoms ch13/string-idoms.c)
add_executable(planet ch13/planet.c)